--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-	<meta name="viewport" content="width=device-width" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link href="https://api.fontshare.com/v2/css?f[]=expose@500,400&display=swap" rel="stylesheet">
 	%sveltekit.head%
 </head>
